--- a/app/src/main/res/menu/placedata_menu.xml
+++ b/app/src/main/res/menu/placedata_menu.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="none">
+
+        <item
+            android:id="@+id/opt_fav_place"
+            android:title="@string/opt_fav_place"
+            android:icon="@drawable/ic_baseline_favorite_unchecked_24"
+            app:showAsAction="always"/>
 
         <item
             android:id="@+id/opt_edit_place"
