--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="greyLight">#C6C6C6</color>
     <color name="greyDark">#676767</color>
+    <color name="red">#CF1414</color>
 </resources>
