--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,11 +7,17 @@
     <dimen name="size_30">30sp</dimen>
     <dimen name="size_35">35sp</dimen>
     <dimen name="size_40">40sp</dimen>
+    <dimen name="size_50">50sp</dimen>
+    <dimen name="size_55">55sp</dimen>
+    <dimen name="size_60">60sp</dimen>
+    <dimen name="size_70">70sp</dimen>
 
 
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_10">10dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="margin_25">25dp</dimen>
     <dimen name="margin_56">56dp</dimen>
 
     <!-- LOGIN  -->
