--- a/app/src/main/res/layout/fragment_user_options.xml
+++ b/app/src/main/res/layout/fragment_user_options.xml
@@ -19,13 +19,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_delete_account"
+        android:id="@+id/btn_edit_prefs"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="@color/red"
-        android:text="DAR DE BAJA"
+        android:layout_marginTop="70dp"
+        android:text="@string/edituser_prefs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_edit_user_data" />
+
+    <Button
+        android:id="@+id/btn_delete_account"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:backgroundTint="@color/red"
+        android:text="DAR DE BAJA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_edit_prefs" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
