--- a/app/src/main/res/layout/tags_item_list.xml
+++ b/app/src/main/res/layout/tags_item_list.xml
@@ -8,6 +8,7 @@
 
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
