--- a/app/src/main/res/layout/dialog_delete_account.xml
+++ b/app/src/main/res/layout/dialog_delete_account.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginHorizontal="@dimen/size_20"
+    android:layout_marginHorizontal="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="@dimen/size_16"
         android:text="@string/del_account_msg"
         android:textColor="@color/black"
         android:textSize="@dimen/size_20"
