--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -86,4 +86,18 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_gps" />
 
+    <Button
+        android:id="@+id/btn_add_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:backgroundTint="@color/purple_200"
+        app:tint="@color/white"
+        android:text="Agregar llocalización" />
+
 </RelativeLayout>
