--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -64,12 +64,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayout1"
-        app:backgroundTint="@color/purple_200"
-        app:tint="@color/white"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="18dp"
-        android:src="@drawable/ic_baseline_add_24" />
+        android:src="@drawable/ic_baseline_add_24"
+        app:backgroundTint="@color/purple_200"
+        android:visibility="gone"
+        app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_gps"
