--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -99,6 +99,6 @@
         android:layout_marginBottom="16dp"
         app:backgroundTint="@color/purple_200"
         app:tint="@color/white"
-        android:text="Agregar llocalización" />
+        android:text="Agregar localización" />
 
 </RelativeLayout>
