--- a/app/src/main/res/layout/fragment_custom_place_list.xml
+++ b/app/src/main/res/layout/fragment_custom_place_list.xml
@@ -50,6 +50,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:clickable="true"
+            app:borderWidth="0dp"
             android:backgroundTint="@color/purple_200"
             android:src="@drawable/ic_baseline_edit_24"
             app:layout_constraintBottom_toBottomOf="parent"
