--- a/app/src/main/res/layout/fragment_user_list_of_lists.xml
+++ b/app/src/main/res/layout/fragment_user_list_of_lists.xml
@@ -23,11 +23,12 @@
         android:id="@+id/fab_add_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
+        app:borderWidth="0dp"
         android:backgroundTint="@color/purple_200"
-        android:src="@drawable/ic_baseline_add_24"
+        android:src="@drawable/ic_baseline_add_white_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
