--- a/app/src/main/res/layout/userplace_list_item.xml
+++ b/app/src/main/res/layout/userplace_list_item.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/tv_list_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nombre usuario"
+                android:text="Nombre lista"
                 android:layout_marginTop="@dimen/margin_8"
                 android:textColor="@color/black"
                 android:layout_weight="1"
@@ -60,6 +60,22 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_usu_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_8"
+                android:layout_marginEnd="12dp"
+                android:visibility="gone"
+                android:text="Nombre usuario"
+                android:textColor="@color/black"/>
+
+        </LinearLayout>
 
 
         <LinearLayout
