--- a/app/src/main/res/layout/fragment_place_modify.xml
+++ b/app/src/main/res/layout/fragment_place_modify.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.PlaceModify2Fragment">
+    tools:context=".views.PlaceModifyFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".views.PlaceModify2Fragment">
+        tools:context=".views.PlaceModifyFragment">
 
         <LinearLayout
             android:id="@+id/linearLayout1"
